@@ -15,27 +15,27 @@
 if {[string compare test [info procs test]] == 1} then {source defs}
 
 
-test basics-1.0 {Create memory channels} {
+test memchan-basics-1.0 {Create memory channels} {
     set m [memchan]
     close $m
     set m
 } {mem0}
 
-test basics-1.1 {Check tell on memory channels} {
+test memchan-basics-1.1 {Check tell on memory channels} {
     set m [memchan]
     set res [tell $m]
     close $m
     set res
 } {0}
 
-test basics-1.2 {Check seek on memory channels} {
+test memchan-basics-1.2 {Check seek on memory channels} {
     set m [memchan]
     set res [seek $m 0]
     close $m
     set res
 } {}
 
-test basics-1.3 {Check fconfigure/get on memory channels} {
+test memchan-basics-1.3 {Check fconfigure/get on memory channels} {
     set m [memchan]
     set res [fconfigure $m]
     set res [lrange $res [set x [lsearch -exact $res -length]] [incr x]]
@@ -43,7 +43,7 @@ test basics-1.3 {Check fconfigure/get on memory channels} {
     set res
 } {-length 0}
 
-test basics-1.4 {Check fconfigure/get -length} {
+test memchan-basics-1.4 {Check fconfigure/get -length} {
     set m [memchan]
     set res [fconfigure $m -length]
     close $m
@@ -51,7 +51,7 @@ test basics-1.4 {Check fconfigure/get -length} {
 } {0}
 
 
-test readwrite-1.0 {Write, length and tell} {
+test memchan-readwrite-1.0 {Write, length and tell} {
     set m [memchan]
     puts -nonewline $m {hello world}
     set res [list [fconfigure $m -length] [tell $m]]
@@ -59,7 +59,7 @@ test readwrite-1.0 {Write, length and tell} {
     set res
 } {11 11}
 
-test readwrite-1.1 {Write, seek and read} {
+test memchan-readwrite-1.1 {Write, seek and read} {
     set m [memchan]
     puts -nonewline $m {hello world!}
     set res [list [fconfigure $m -length] [tell $m]]
